# yk-case-generation

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
docker/: Dockerfile
docs/: IMPLEMENTATION_DETAILED.md  PIPELINE_OVERVIEW.md  REPORT_EXECUTIVE.md  REPORT_TECHNICAL.md  STATUS.md
env/: environment.yml
scripts/: bootstrap_env.sh  build_case_from_ir.py  build_case_response.py  fetch_projects.py  ocr_to_ir.py  prep_ocr_inputs.py  run_local.sh  run_ocr_inputs.py  run_project_pipeline.py
src/yk_case_generation/: __init__.py  config.py
src/yk_case_generation/cli/: __main__.py
src/yk_case_generation/models/: case_schema.py  document_ir.py
src/yk_case_generation/prompts/: case_stage1_zh.md  case_stage2_zh.md  generate_case.md
src/yk_case_generation/schemas/: case_response_v1.json  case_schema_v1.json
src/yk_case_generation/services/: attachment_processing.py  candidate_fact_builder.py  case_builder.py  case_response_builder.py  docx_parser.py  docx_render.py  extractor.py  image_preprocess.py  ir_builder.py  lims_api.py  llm_client.py  ocr_normalizer.py  ocr_runner.py  pdf_ocr.py  pdf_render.py  pipeline_runner.py  storage.py
src/yk_case_generation/services/ocr_clients/: tencent.py
