[metadata]
name = yk-case-generation
version = 0.0.1

[options]
package_dir =
    = src
packages = find:
install_requires =
    fastapi
    uvicorn
    httpx
    pydantic
    python-docx
    pillow
    typer
    structlog
    pypdf
    tenacity
python_requires = >=3.11

[options.extras_require]
dev =
    pytest
    pytest-mock
    black
    ruff
    mypy

[options.packages.find]
where = src
